force-app/main/default/objects/Account/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <formula>IF(
ISBLANK( BirthDate__c ),

&apos;&apos;,

IF(
And(
Month(Today()) &gt;= Month(BirthDate__c),
Day(Today()) &gt;= Day(BirthDate__c)
),

TEXT(Year(Today())- Year(BirthDate__c)) &amp; &quot; &quot; &amp; &quot;years&quot; &amp; &quot; &quot; &amp; TEXT(Month(Today())-Month(BirthDate__c)) &amp; &quot; &quot; &amp; &quot;months&quot; &amp; &quot; &quot; &amp; TEXT(Day(Today())-Day(BirthDate__c)),

IF(
And(month(Today())&lt; month(BirthDate__c), Day(Today())&gt;= Day(BirthDate__c)),

TEXT(Year(Today())-Year(BirthDate__c)-1) &amp; &quot; &quot; &amp; &quot;years&quot; &amp; &quot; &quot; &amp; TEXT(12 - Month(BirthDate__c)+month(Today())) &amp; &quot; &quot; &amp; &quot;months&quot; &amp; &quot; &quot; &amp; TEXT(Day(Today())-Day(BirthDate__c)),

if(
And( month(Today())&lt; month(BirthDate__c), Day(Today())&lt; Day(BirthDate__c)),

(TEXT( (Year(Today())-Year(BirthDate__c)-1)) &amp; &quot; &quot; &amp; &quot;years&quot; &amp; &quot; &quot; &amp; TEXT((12 - Month(BirthDate__c)+month(Today())-1)) &amp; &quot; &quot; &amp; &quot;months&quot; ) &amp; &quot; &quot; &amp;
CASE(month(BirthDate__c),
2, TEXT( (28 - Day(BirthDate__c))+ Day(Today())),
4, TEXT( (30 - Day(BirthDate__c))+ Day(Today())),
6, TEXT( (30 - Day(BirthDate__c))+ Day(Today())),
9, TEXT( (30 - Day(BirthDate__c))+ Day(Today())),
11, TEXT( (30 - Day(BirthDate__c))+ Day(Today())),
TEXT( (31 - Day(BirthDate__c))+ Day(Today()))
),
if(
And( month(Today())= month(BirthDate__c), Day(Today())&lt; Day(BirthDate__c)),

(TEXT(Year(Today())- Year(BirthDate__c)-1)) &amp; &quot; &quot; &amp; &quot;years&quot; &amp; &quot; &quot; &amp; &quot;11&quot; &amp; &quot; &quot; &amp; &quot;months&quot; &amp; &quot; &quot; &amp;
CASE(month(BirthDate__c),
2, TEXT( (28 - Day(BirthDate__c))+ Day(Today())),
4, TEXT( (30 - Day(BirthDate__c))+ Day(Today())),
6, TEXT( (30 - Day(BirthDate__c))+ Day(Today())),
9, TEXT( (30 - Day(BirthDate__c))+ Day(Today())),
11, TEXT( (30 - Day(BirthDate__c))+ Day(Today())),
TEXT( (31 - Day(BirthDate__c))+ Day(Today()))
),
(TEXT(Year(Today())- Year(BirthDate__c))) &amp; &quot; &quot; &amp; &quot;years&quot; &amp; &quot; &quot; &amp; TEXT(Month(Today())-Month(BirthDate__c)-1) &amp; &quot; &quot; &amp; &quot;months&quot; &amp; &quot; &quot; &amp;
CASE(month(BirthDate__c),
2, TEXT( (28 - Day(BirthDate__c))+ Day(Today())),
4, TEXT( (30 - Day(BirthDate__c))+ Day(Today())),
6, TEXT( (30 - Day(BirthDate__c))+ Day(Today())),
9, TEXT( (30 - Day(BirthDate__c))+ Day(Today())),
11, TEXT( (30 - Day(BirthDate__c))+ Day(Today())),
TEXT( (31 - Day(BirthDate__c))+ Day(Today()))
)
)
)
)
) &amp; &quot; &quot; &amp; &quot;days&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <type>Text</type>
</CustomField>