force-app/main/default/objects/Account/fields/Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_ID__c</fullName>
    <displayFormat>{0000000000}</displayFormat>
    <label>Customer ID</label>
    <type>AutoNumber</type>
</CustomField>