force-app/main/default/objects/Account/fields/Mother_s_Maiden_Name__c.field-meta.xml
<CustomField>
    <fullName>Mother_s_Maiden_Name__c</fullName>
    <externalId>true</externalId>
    <label>Mother&apos;s Maiden Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>