force-app/main/default/objects/Account/fields/Source_of_Income__c.field-meta.xml
<CustomField>
    <fullName>Source_of_Income__c</fullName>
    <externalId>true</externalId>
    <label>Source of Income</label>
    <length>100</length>
    <type>Text</type>
</CustomField>