force-app/main/default/objects/Account/fields/Total_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Total_Invoice__c</fullName>
    <label>Total Invoice</label>
    <summarizedField>Invoice__c.Total_Product_Invoice__c</summarizedField>
    <summaryFilterItems>
        <field>Invoice__c.Status__c</field>
        <operation>equals</operation>
        <value>Invoiced, Overdue, Paid</value>
    </summaryFilterItems>
    <summaryForeignKey>Invoice__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>